--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.4.2
   cloud_firestore: ^4.5.2
   firebase_storage: ^11.1.1
+  image_picker: ^0.8.7+3
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
     - assets/
     - assets/icons/
     - assets/images/
+    - lib/services/catrgory_model.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
